nuevo analisis tipo recinto

--- a/analisis_descriptivo.ipynb
+++ b/analisis_descriptivo.ipynb
@@ -13,7 +13,7 @@
     "import scipy as sp\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns\n",
+    "#import seaborn as sns\n",
     "import duckdb\n",
     "\n",
     "PARQUET_FILE = \"\"\"datos_urgencia_consolidados.parquet\"\"\"\n",
@@ -29,6 +29,409 @@
     "    compare = df[column].drop([k for k in range(window)]).reset_index(drop= True) - df[column].drop([n-window + k for k in range(window)]).reset_index(drop= True)\n",
     "    compare= compare.reset_index(drop= True)\n",
     "    return np.argmax(compare)+window //2 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>IdCausa</th>\n",
+       "      <th>GlosaCausa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>SECCIÓN 1. TOTAL ATENCIONES DE URGENCIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>TOTAL CAUSAS SISTEMA RESPIRATORIO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Bronquitis/bronquiolitis aguda (J20-J21)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>Influenza (J09-J11)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>Neumonía (J12-J18)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>Otra causa respiratoria (J22, J30-J39, J47, J6...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>7</td>\n",
+       "      <td>CAUSAS SISTEMA RESPIRATORIO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>8</td>\n",
+       "      <td>- LAS DEMÁS CAUSAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>10</td>\n",
+       "      <td>IRA Alta (J00-J06)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>11</td>\n",
+       "      <td>Crisis obstructiva bronquial (J40-J46)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>12</td>\n",
+       "      <td>TOTAL CAUSAS SISTEMA CIRCULATORIO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>13</td>\n",
+       "      <td>Infarto agudo miocardio</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>14</td>\n",
+       "      <td>Accidente vascular encefálico</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>15</td>\n",
+       "      <td>Crisis hipertensiva</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>16</td>\n",
+       "      <td>Arritmia grave</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>17</td>\n",
+       "      <td>Otras causas circulatorias</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>18</td>\n",
+       "      <td>TOTAL TRAUMATISMOS Y ENVENENAMIENTO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>19</td>\n",
+       "      <td>Accidentes del tránsito</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>20</td>\n",
+       "      <td>Otras causas externas</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>21</td>\n",
+       "      <td>TOTAL DEMÁS CAUSAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>22</td>\n",
+       "      <td>- CAUSAS SISTEMA CIRCULATORIO</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>23</td>\n",
+       "      <td>- TRAUMATISMOS Y ENVENENAMIENTOS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>24</td>\n",
+       "      <td>CIRUGÍAS DE URGENCIA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>25</td>\n",
+       "      <td>SECCIÓN 2. TOTAL DE HOSPITALIZACIONES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>27</td>\n",
+       "      <td>Pacientes en espera de hospitalización</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>28</td>\n",
+       "      <td>Pacientes en espera de hospitalización que esp...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>29</td>\n",
+       "      <td>DIARREA AGUDA (A00-A09)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>30</td>\n",
+       "      <td>COVID 19 Confirmado (U07.1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Covid-19, Virus identificado U07.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Covid-19, Virus no identificado U07.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>31</td>\n",
+       "      <td>COVID 19 Sospechoso (U07.2)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>32</td>\n",
+       "      <td>- COVID-19, VIRUS IDENTIFICADO U07.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>32</td>\n",
+       "      <td>- COVID 19 CONFIRMADO (U07.1)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>33</td>\n",
+       "      <td>- COVID 19 SOSPECHOSO (U07.2)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>33</td>\n",
+       "      <td>- COVID-19, VIRUS NO IDENTIFICADO U07.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>34</td>\n",
+       "      <td>TOTAL DEMANDA</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>35</td>\n",
+       "      <td>Lesiones autoinfligidas intencionalmente (X60-...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>36</td>\n",
+       "      <td>TOTAL CAUSAS DE TRASTORNOS MENTALES (F00-F99)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>37</td>\n",
+       "      <td>Ideación Suicida (R45.8)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>38</td>\n",
+       "      <td>Trastornos mentales y del comportamiento debid...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>40</th>\n",
+       "      <td>39</td>\n",
+       "      <td>Trastornos del Humor (Afectivos) (F30-F39)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>40</td>\n",
+       "      <td>Trastornos neuróticos, trastornos relacionados...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>42</th>\n",
+       "      <td>41</td>\n",
+       "      <td>Otros trastornos mentales no contenidos en las...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43</th>\n",
+       "      <td>42</td>\n",
+       "      <td>- CAUSAS POR TRASTORNOS MENTALES (F00-F99)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    IdCausa                                         GlosaCausa\n",
+       "0         1            SECCIÓN 1. TOTAL ATENCIONES DE URGENCIA\n",
+       "1         2                  TOTAL CAUSAS SISTEMA RESPIRATORIO\n",
+       "2         3           Bronquitis/bronquiolitis aguda (J20-J21)\n",
+       "3         4                                Influenza (J09-J11)\n",
+       "4         5                                 Neumonía (J12-J18)\n",
+       "5         6  Otra causa respiratoria (J22, J30-J39, J47, J6...\n",
+       "6         7                        CAUSAS SISTEMA RESPIRATORIO\n",
+       "7         8                                 - LAS DEMÁS CAUSAS\n",
+       "8        10                                 IRA Alta (J00-J06)\n",
+       "9        11             Crisis obstructiva bronquial (J40-J46)\n",
+       "10       12                  TOTAL CAUSAS SISTEMA CIRCULATORIO\n",
+       "11       13                            Infarto agudo miocardio\n",
+       "12       14                      Accidente vascular encefálico\n",
+       "13       15                                Crisis hipertensiva\n",
+       "14       16                                     Arritmia grave\n",
+       "15       17                         Otras causas circulatorias\n",
+       "16       18                TOTAL TRAUMATISMOS Y ENVENENAMIENTO\n",
+       "17       19                            Accidentes del tránsito\n",
+       "18       20                              Otras causas externas\n",
+       "19       21                                 TOTAL DEMÁS CAUSAS\n",
+       "20       22                      - CAUSAS SISTEMA CIRCULATORIO\n",
+       "21       23                   - TRAUMATISMOS Y ENVENENAMIENTOS\n",
+       "22       24                               CIRUGÍAS DE URGENCIA\n",
+       "23       25              SECCIÓN 2. TOTAL DE HOSPITALIZACIONES\n",
+       "24       27             Pacientes en espera de hospitalización\n",
+       "25       28  Pacientes en espera de hospitalización que esp...\n",
+       "26       29                            DIARREA AGUDA (A00-A09)\n",
+       "27       30                        COVID 19 Confirmado (U07.1)\n",
+       "28       30                 Covid-19, Virus identificado U07.1\n",
+       "29       31              Covid-19, Virus no identificado U07.2\n",
+       "30       31                        COVID 19 Sospechoso (U07.2)\n",
+       "31       32               - COVID-19, VIRUS IDENTIFICADO U07.1\n",
+       "32       32                      - COVID 19 CONFIRMADO (U07.1)\n",
+       "33       33                      - COVID 19 SOSPECHOSO (U07.2)\n",
+       "34       33            - COVID-19, VIRUS NO IDENTIFICADO U07.2\n",
+       "35       34                                      TOTAL DEMANDA\n",
+       "36       35  Lesiones autoinfligidas intencionalmente (X60-...\n",
+       "37       36      TOTAL CAUSAS DE TRASTORNOS MENTALES (F00-F99)\n",
+       "38       37                           Ideación Suicida (R45.8)\n",
+       "39       38  Trastornos mentales y del comportamiento debid...\n",
+       "40       39         Trastornos del Humor (Afectivos) (F30-F39)\n",
+       "41       40  Trastornos neuróticos, trastornos relacionados...\n",
+       "42       41  Otros trastornos mentales no contenidos en las...\n",
+       "43       42         - CAUSAS POR TRASTORNOS MENTALES (F00-F99)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duckdb.sql(\"\"\"select distinct IDCausa, GlosaCausa \n",
+    "FROM datos_urgencia_consolidados.parquet\n",
+    "order by IdCausa\n",
+    "\"\"\").df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GLOSATIPOESTABLECIMIENTO</th>\n",
+       "      <th>IdCausa</th>\n",
+       "      <th>atenciones</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Hospital</td>\n",
+       "      <td>7</td>\n",
+       "      <td>472134.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>SAPU</td>\n",
+       "      <td>7</td>\n",
+       "      <td>169.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>SAR</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2794.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>SUR</td>\n",
+       "      <td>7</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  GLOSATIPOESTABLECIMIENTO  IdCausa  atenciones\n",
+       "0                 Hospital        7    472134.0\n",
+       "1                     SAPU        7       169.0\n",
+       "2                      SAR        7      2794.0\n",
+       "3                      SUR        7         2.0"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "duckdb.sql(\"\"\"select GLOSATIPOESTABLECIMIENTO \n",
+    ", IDCausa\n",
+    ", sum(Total)  as atenciones\n",
+    "FROM datos_urgencia_consolidados.parquet\n",
+    "--where IdCausa in (2,7)\n",
+    "where IdCausa in (7)\n",
+    "--and year(strptime(fecha, '%d/%m/%Y')) in (2017,2018,2019,2022,2023)\n",
+    "group by  GLOSATIPOESTABLECIMIENTO, IdCausa\n",
+    "having atenciones >0\n",
+    "order by  GLOSATIPOESTABLECIMIENTO, IdCausa\n",
+    "\"\"\").df()\n",
+    "#TOTAL sin filtrar por codigo dependencia null  474928"
    ]
   },
   {
@@ -941,7 +1344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
