actulaizado el analisis de tipos de recinto e inclusion de nuevo evaluador de la clasificacion

--- a/table2_analisis_SVM_grupos_etarios.ipynb
+++ b/table2_analisis_SVM_grupos_etarios.ipynb
@@ -216,43 +216,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Menores 1</th>\n",
-       "      <td>0.696402</td>\n",
-       "      <td>0.589688</td>\n",
-       "      <td>0.603612</td>\n",
-       "      <td>0.604481</td>\n",
-       "      <td>0.656276</td>\n",
+       "      <td>0.140923</td>\n",
+       "      <td>0.433054</td>\n",
+       "      <td>0.470906</td>\n",
+       "      <td>0.447733</td>\n",
+       "      <td>0.524429</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>De 1 a 4</th>\n",
-       "      <td>0.589688</td>\n",
-       "      <td>0.734121</td>\n",
-       "      <td>0.867455</td>\n",
-       "      <td>0.542947</td>\n",
-       "      <td>0.533329</td>\n",
+       "      <td>0.433054</td>\n",
+       "      <td>0.280656</td>\n",
+       "      <td>0.839044</td>\n",
+       "      <td>0.380244</td>\n",
+       "      <td>0.385250</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>De 5 a 14</th>\n",
-       "      <td>0.603612</td>\n",
-       "      <td>0.867455</td>\n",
-       "      <td>0.815000</td>\n",
-       "      <td>0.539490</td>\n",
-       "      <td>0.578276</td>\n",
+       "      <td>0.470906</td>\n",
+       "      <td>0.839044</td>\n",
+       "      <td>0.527471</td>\n",
+       "      <td>0.402762</td>\n",
+       "      <td>0.450818</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>De 15 a 64</th>\n",
-       "      <td>0.604481</td>\n",
-       "      <td>0.542947</td>\n",
-       "      <td>0.539490</td>\n",
-       "      <td>0.727171</td>\n",
-       "      <td>0.820802</td>\n",
+       "      <td>0.447733</td>\n",
+       "      <td>0.380244</td>\n",
+       "      <td>0.402762</td>\n",
+       "      <td>0.235119</td>\n",
+       "      <td>0.773839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>De 65 y mas</th>\n",
-       "      <td>0.656276</td>\n",
-       "      <td>0.533329</td>\n",
-       "      <td>0.578276</td>\n",
-       "      <td>0.820802</td>\n",
-       "      <td>0.838462</td>\n",
+       "      <td>0.524429</td>\n",
+       "      <td>0.385250</td>\n",
+       "      <td>0.450818</td>\n",
+       "      <td>0.773839</td>\n",
+       "      <td>0.573628</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -260,11 +260,11 @@
       ],
       "text/plain": [
        "             Menores 1  De 1 a 4  De 5 a 14  De 15 a 64  De 65 y mas\n",
-       "Menores 1     0.696402  0.589688   0.603612    0.604481     0.656276\n",
-       "De 1 a 4      0.589688  0.734121   0.867455    0.542947     0.533329\n",
-       "De 5 a 14     0.603612  0.867455   0.815000    0.539490     0.578276\n",
-       "De 15 a 64    0.604481  0.542947   0.539490    0.727171     0.820802\n",
-       "De 65 y mas   0.656276  0.533329   0.578276    0.820802     0.838462"
+       "Menores 1     0.140923  0.433054   0.470906    0.447733     0.524429\n",
+       "De 1 a 4      0.433054  0.280656   0.839044    0.380244     0.385250\n",
+       "De 5 a 14     0.470906  0.839044   0.527471    0.402762     0.450818\n",
+       "De 15 a 64    0.447733  0.380244   0.402762    0.235119     0.773839\n",
+       "De 65 y mas   0.524429  0.385250   0.450818    0.773839     0.573628"
       ]
      },
      "execution_count": 7,
@@ -310,10 +310,13 @@
     "        linear_clf.fit(X_train, y_train)\n",
     "        # Evaluate the result \n",
     "        y_train_pred = linear_clf.predict(X_train)\n",
+    "        #precision_clasificador = metrics.f1_score(y_train, y_train_pred)\n",
+    "        precision_clasificador = metrics.balanced accuracy_score(y_train, y_train_pred)\n",
+    "        #presicion_clasificador = metrics.accuracy_score(y_train, y_train_pred)\n",
     "        if len(group_indices)==1:\n",
-    "            resultados[iter, group_indices[0],group_indices[0]] = metrics.accuracy_score(y_train, y_train_pred)\n",
+    "            resultados[iter, group_indices[0],group_indices[0]] = precision_clasificador\n",
     "        else:\n",
-    "            resultados[iter, group_indices[0],group_indices[1]] = metrics.accuracy_score(y_train, y_train_pred)\n",
+    "            resultados[iter, group_indices[0],group_indices[1]] = precision_clasificador\n",
     "            resultados[iter, group_indices[1],group_indices[0]] = resultados[iter,group_indices[0],group_indices[1]]\n",
     "#resultados.mean(0)\n",
     "pd.DataFrame(resultados.mean(0),columns=grupo_etario_legend, index = grupo_etario_legend)\n",
