--- a/table3_4_analisis_SVM_zona_geografica_zonas_corfo.ipynb
+++ b/table3_4_analisis_SVM_zona_geografica_zonas_corfo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -396,67 +396,67 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(1,)</td>\n",
-       "      <td>0.838562</td>\n",
+       "      <td>(0, 1)</td>\n",
+       "      <td>0.663175</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>(0,)</td>\n",
-       "      <td>0.837604</td>\n",
+       "      <td>(0, 1, 2)</td>\n",
+       "      <td>0.651075</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>(5,)</td>\n",
-       "      <td>0.764208</td>\n",
+       "      <td>(0,)</td>\n",
+       "      <td>0.647949</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>(3,)</td>\n",
-       "      <td>0.745292</td>\n",
+       "      <td>(4, 5)</td>\n",
+       "      <td>0.622205</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>(4,)</td>\n",
-       "      <td>0.736938</td>\n",
+       "      <td>(0, 2)</td>\n",
+       "      <td>0.608044</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>(0, 1)</td>\n",
-       "      <td>0.734167</td>\n",
+       "      <td>(0, 5)</td>\n",
+       "      <td>0.606961</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>(2,)</td>\n",
-       "      <td>0.699271</td>\n",
+       "      <td>(1,)</td>\n",
+       "      <td>0.604988</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>(0, 5)</td>\n",
-       "      <td>0.669021</td>\n",
+       "      <td>(0, 2, 5)</td>\n",
+       "      <td>0.593878</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>(4, 5)</td>\n",
-       "      <td>0.661167</td>\n",
+       "      <td>(0, 4, 5)</td>\n",
+       "      <td>0.589333</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Grouping  accuracy\n",
-       "0     (1,)  0.838562\n",
-       "1     (0,)  0.837604\n",
-       "2     (5,)  0.764208\n",
-       "3     (3,)  0.745292\n",
-       "4     (4,)  0.736938\n",
-       "5   (0, 1)  0.734167\n",
-       "6     (2,)  0.699271\n",
-       "7   (0, 5)  0.669021\n",
-       "8   (4, 5)  0.661167"
+       "    Grouping  accuracy\n",
+       "0     (0, 1)  0.663175\n",
+       "1  (0, 1, 2)  0.651075\n",
+       "2       (0,)  0.647949\n",
+       "3     (4, 5)  0.622205\n",
+       "4     (0, 2)  0.608044\n",
+       "5     (0, 5)  0.606961\n",
+       "6       (1,)  0.604988\n",
+       "7  (0, 2, 5)  0.593878\n",
+       "8  (0, 4, 5)  0.589333"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,16 +508,19 @@
     "        # Evaluate the result \n",
     "        y_train_pred = linear_clf.predict(X_train)\n",
     "        #print (\"The Accuracy of our classifier is:\", metrics.accuracy_score(y_train, y_train_pred)*100)\n",
+    "        precision_clasificador = metrics.balanced_accuracy_score(y_train, y_train_pred)\n",
+    "        #precision_clasificador = metrics.f1_score(y_train, y_train_pred)\n",
+    "        #precision_clasificador = metrics.accuracy_score(y_train, y_train_pred)\n",
     "        if len(group_indices)==1:\n",
-    "            resultados[iter, group_indices[0],group_indices[0]] = metrics.accuracy_score(y_train, y_train_pred)\n",
+    "            resultados[iter, group_indices[0],group_indices[0]] = precision_clasificador\n",
     "        elif len(group_indices)==2:\n",
-    "            resultados[iter, group_indices[0],group_indices[1]] = metrics.accuracy_score(y_train, y_train_pred)\n",
+    "            resultados[iter, group_indices[0],group_indices[1]] = precision_clasificador\n",
     "            resultados[iter, group_indices[1],group_indices[0]] = resultados[iter,group_indices[0],group_indices[1]]\n",
     "        \n",
     "        if tuple(group_indices) in resultados_dic.keys():\n",
-    "            resultados_dic[tuple(group_indices)].append(metrics.accuracy_score(y_train, y_train_pred))\n",
+    "            resultados_dic[tuple(group_indices)].append(precision_clasificador)\n",
     "        else:\n",
-    "            resultados_dic[tuple(group_indices)]= [metrics.accuracy_score(y_train, y_train_pred)]\n",
+    "            resultados_dic[tuple(group_indices)]= [precision_clasificador]\n",
     "        \n",
     "    #print(resultados[iter])\n",
     "summary_resultados = {key:np.mean(value) for key, value in resultados_dic.items()}\n",
@@ -525,12 +528,13 @@
     "\n",
     "summary_resultados_sorted = sorted(summary_resultados.items(), key=lambda x:-x[1])\n",
     "pd.DataFrame(summary_resultados_sorted[0:9],columns=[\"Grouping\",\"accuracy\"])\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -565,57 +569,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>ZonaNorteGrande</th>\n",
-       "      <td>0.837604</td>\n",
-       "      <td>0.734167</td>\n",
-       "      <td>0.643125</td>\n",
-       "      <td>0.589354</td>\n",
-       "      <td>0.577583</td>\n",
-       "      <td>0.669021</td>\n",
+       "      <td>0.378917</td>\n",
+       "      <td>0.490209</td>\n",
+       "      <td>0.464183</td>\n",
+       "      <td>0.303427</td>\n",
+       "      <td>0.315650</td>\n",
+       "      <td>0.434020</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZonaNorteChico</th>\n",
-       "      <td>0.734167</td>\n",
-       "      <td>0.838562</td>\n",
-       "      <td>0.622750</td>\n",
-       "      <td>0.655604</td>\n",
-       "      <td>0.594271</td>\n",
-       "      <td>0.601000</td>\n",
+       "      <td>0.490209</td>\n",
+       "      <td>0.264359</td>\n",
+       "      <td>0.398630</td>\n",
+       "      <td>0.372093</td>\n",
+       "      <td>0.289727</td>\n",
+       "      <td>0.259415</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZonaNucleoCentral</th>\n",
-       "      <td>0.643125</td>\n",
-       "      <td>0.622750</td>\n",
-       "      <td>0.699271</td>\n",
-       "      <td>0.568104</td>\n",
-       "      <td>0.544896</td>\n",
-       "      <td>0.566083</td>\n",
+       "      <td>0.464183</td>\n",
+       "      <td>0.398630</td>\n",
+       "      <td>0.204485</td>\n",
+       "      <td>0.402317</td>\n",
+       "      <td>0.381529</td>\n",
+       "      <td>0.385575</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZonaConcepcionLaFrontera</th>\n",
-       "      <td>0.589354</td>\n",
-       "      <td>0.655604</td>\n",
-       "      <td>0.568104</td>\n",
-       "      <td>0.745292</td>\n",
-       "      <td>0.624708</td>\n",
-       "      <td>0.588958</td>\n",
+       "      <td>0.303427</td>\n",
+       "      <td>0.372093</td>\n",
+       "      <td>0.402317</td>\n",
+       "      <td>0.142092</td>\n",
+       "      <td>0.432531</td>\n",
+       "      <td>0.364560</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZonaRegionDeLosLagos</th>\n",
-       "      <td>0.577583</td>\n",
-       "      <td>0.594271</td>\n",
-       "      <td>0.544896</td>\n",
-       "      <td>0.624708</td>\n",
-       "      <td>0.736937</td>\n",
-       "      <td>0.661167</td>\n",
+       "      <td>0.315650</td>\n",
+       "      <td>0.289727</td>\n",
+       "      <td>0.381529</td>\n",
+       "      <td>0.432531</td>\n",
+       "      <td>0.217427</td>\n",
+       "      <td>0.481969</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>ZonaRegionCanales</th>\n",
-       "      <td>0.669021</td>\n",
-       "      <td>0.601000</td>\n",
-       "      <td>0.566083</td>\n",
-       "      <td>0.588958</td>\n",
-       "      <td>0.661167</td>\n",
-       "      <td>0.764208</td>\n",
+       "      <td>0.434020</td>\n",
+       "      <td>0.259415</td>\n",
+       "      <td>0.385575</td>\n",
+       "      <td>0.364560</td>\n",
+       "      <td>0.481969</td>\n",
+       "      <td>0.226501</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -623,31 +627,31 @@
       ],
       "text/plain": [
        "                          ZonaNorteGrande  ZonaNorteChico  ZonaNucleoCentral  \\\n",
-       "ZonaNorteGrande                  0.837604        0.734167           0.643125   \n",
-       "ZonaNorteChico                   0.734167        0.838562           0.622750   \n",
-       "ZonaNucleoCentral                0.643125        0.622750           0.699271   \n",
-       "ZonaConcepcionLaFrontera         0.589354        0.655604           0.568104   \n",
-       "ZonaRegionDeLosLagos             0.577583        0.594271           0.544896   \n",
-       "ZonaRegionCanales                0.669021        0.601000           0.566083   \n",
+       "ZonaNorteGrande                  0.378917        0.490209           0.464183   \n",
+       "ZonaNorteChico                   0.490209        0.264359           0.398630   \n",
+       "ZonaNucleoCentral                0.464183        0.398630           0.204485   \n",
+       "ZonaConcepcionLaFrontera         0.303427        0.372093           0.402317   \n",
+       "ZonaRegionDeLosLagos             0.315650        0.289727           0.381529   \n",
+       "ZonaRegionCanales                0.434020        0.259415           0.385575   \n",
        "\n",
        "                          ZonaConcepcionLaFrontera  ZonaRegionDeLosLagos  \\\n",
-       "ZonaNorteGrande                           0.589354              0.577583   \n",
-       "ZonaNorteChico                            0.655604              0.594271   \n",
-       "ZonaNucleoCentral                         0.568104              0.544896   \n",
-       "ZonaConcepcionLaFrontera                  0.745292              0.624708   \n",
-       "ZonaRegionDeLosLagos                      0.624708              0.736937   \n",
-       "ZonaRegionCanales                         0.588958              0.661167   \n",
+       "ZonaNorteGrande                           0.303427              0.315650   \n",
+       "ZonaNorteChico                            0.372093              0.289727   \n",
+       "ZonaNucleoCentral                         0.402317              0.381529   \n",
+       "ZonaConcepcionLaFrontera                  0.142092              0.432531   \n",
+       "ZonaRegionDeLosLagos                      0.432531              0.217427   \n",
+       "ZonaRegionCanales                         0.364560              0.481969   \n",
        "\n",
        "                          ZonaRegionCanales  \n",
-       "ZonaNorteGrande                    0.669021  \n",
-       "ZonaNorteChico                     0.601000  \n",
-       "ZonaNucleoCentral                  0.566083  \n",
-       "ZonaConcepcionLaFrontera           0.588958  \n",
-       "ZonaRegionDeLosLagos               0.661167  \n",
-       "ZonaRegionCanales                  0.764208  "
+       "ZonaNorteGrande                    0.434020  \n",
+       "ZonaNorteChico                     0.259415  \n",
+       "ZonaNucleoCentral                  0.385575  \n",
+       "ZonaConcepcionLaFrontera           0.364560  \n",
+       "ZonaRegionDeLosLagos               0.481969  \n",
+       "ZonaRegionCanales                  0.226501  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
