--- a/table3_4_v2_analisis_SVM_zona_geografica_zonas_macrozonas.ipynb
+++ b/table3_4_v2_analisis_SVM_zona_geografica_zonas_macrozonas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -306,48 +306,48 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>(1,)</td>\n",
-       "      <td>0.865083</td>\n",
+       "      <td>(0, 1, 2)</td>\n",
+       "      <td>0.710588</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>(3,)</td>\n",
-       "      <td>0.826208</td>\n",
+       "      <td>(0, 1)</td>\n",
+       "      <td>0.700102</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>(0, 1)</td>\n",
-       "      <td>0.799646</td>\n",
+       "      <td>(0, 1, 4)</td>\n",
+       "      <td>0.653150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>(5,)</td>\n",
-       "      <td>0.768312</td>\n",
+       "      <td>(0, 4, 5)</td>\n",
+       "      <td>0.614893</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>(0,)</td>\n",
-       "      <td>0.735229</td>\n",
+       "      <td>(0, 1, 5)</td>\n",
+       "      <td>0.578650</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>(4,)</td>\n",
-       "      <td>0.727938</td>\n",
+       "      <td>(0, 2, 4)</td>\n",
+       "      <td>0.561308</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>(2,)</td>\n",
-       "      <td>0.724125</td>\n",
+       "      <td>(0, 1, 3)</td>\n",
+       "      <td>0.559030</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>(3, 5)</td>\n",
-       "      <td>0.707187</td>\n",
+       "      <td>(0, 2, 3)</td>\n",
+       "      <td>0.550398</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>(0, 1, 2)</td>\n",
-       "      <td>0.703208</td>\n",
+       "      <td>(0, 2, 5)</td>\n",
+       "      <td>0.547961</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -355,18 +355,18 @@
       ],
       "text/plain": [
        "    Grouping  accuracy\n",
-       "0       (1,)  0.865083\n",
-       "1       (3,)  0.826208\n",
-       "2     (0, 1)  0.799646\n",
-       "3       (5,)  0.768312\n",
-       "4       (0,)  0.735229\n",
-       "5       (4,)  0.727938\n",
-       "6       (2,)  0.724125\n",
-       "7     (3, 5)  0.707187\n",
-       "8  (0, 1, 2)  0.703208"
+       "0  (0, 1, 2)  0.710588\n",
+       "1     (0, 1)  0.700102\n",
+       "2  (0, 1, 4)  0.653150\n",
+       "3  (0, 4, 5)  0.614893\n",
+       "4  (0, 1, 5)  0.578650\n",
+       "5  (0, 2, 4)  0.561308\n",
+       "6  (0, 1, 3)  0.559030\n",
+       "7  (0, 2, 3)  0.550398\n",
+       "8  (0, 2, 5)  0.547961"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,16 +418,18 @@
     "        # Evaluate the result \n",
     "        y_train_pred = linear_clf.predict(X_train)\n",
     "        #print (\"The Accuracy of our classifier is:\", metrics.accuracy_score(y_train, y_train_pred)*100)\n",
+    "        precision_clasificador = metrics.f1_score(y_train, y_train_pred)\n",
+    "        #precision_clasificador = metrics.accuracy_score(y_train, y_train_pred)\n",
     "        if len(group_indices)==1:\n",
-    "            resultados[iter, group_indices[0],group_indices[0]] = metrics.accuracy_score(y_train, y_train_pred)\n",
+    "            resultados[iter, group_indices[0],group_indices[0]] = precision_clasificador\n",
     "        elif len(group_indices)==2:\n",
-    "            resultados[iter, group_indices[0],group_indices[1]] = metrics.accuracy_score(y_train, y_train_pred)\n",
+    "            resultados[iter, group_indices[0],group_indices[1]] = precision_clasificador\n",
     "            resultados[iter, group_indices[1],group_indices[0]] = resultados[iter,group_indices[0],group_indices[1]]\n",
     "        \n",
     "        if tuple(group_indices) in resultados_dic.keys():\n",
-    "            resultados_dic[tuple(group_indices)].append(metrics.accuracy_score(y_train, y_train_pred))\n",
+    "            resultados_dic[tuple(group_indices)].append(precision_clasificador)\n",
     "        else:\n",
-    "            resultados_dic[tuple(group_indices)]= [metrics.accuracy_score(y_train, y_train_pred)]\n",
+    "            resultados_dic[tuple(group_indices)]= [precision_clasificador]\n",
     "        \n",
     "    #print(resultados[iter])\n",
     "summary_resultados = {key:np.mean(value) for key, value in resultados_dic.items()}\n",
@@ -440,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -475,57 +477,57 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>MacrozonaNorte</th>\n",
-       "      <td>0.735229</td>\n",
-       "      <td>0.799646</td>\n",
-       "      <td>0.572771</td>\n",
-       "      <td>0.556042</td>\n",
-       "      <td>0.567208</td>\n",
-       "      <td>0.570292</td>\n",
+       "      <td>0.327651</td>\n",
+       "      <td>0.700102</td>\n",
+       "      <td>0.418437</td>\n",
+       "      <td>0.341228</td>\n",
+       "      <td>0.387163</td>\n",
+       "      <td>0.396523</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MacrozonaCentro</th>\n",
-       "      <td>0.799646</td>\n",
-       "      <td>0.865083</td>\n",
-       "      <td>0.657167</td>\n",
-       "      <td>0.668708</td>\n",
-       "      <td>0.616438</td>\n",
-       "      <td>0.591813</td>\n",
+       "      <td>0.700102</td>\n",
+       "      <td>0.391551</td>\n",
+       "      <td>0.425906</td>\n",
+       "      <td>0.335768</td>\n",
+       "      <td>0.286122</td>\n",
+       "      <td>0.272740</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>RegionMetropolitana</th>\n",
-       "      <td>0.572771</td>\n",
-       "      <td>0.657167</td>\n",
-       "      <td>0.724125</td>\n",
-       "      <td>0.677396</td>\n",
-       "      <td>0.547271</td>\n",
-       "      <td>0.585417</td>\n",
+       "      <td>0.418437</td>\n",
+       "      <td>0.425906</td>\n",
+       "      <td>0.198714</td>\n",
+       "      <td>0.465454</td>\n",
+       "      <td>0.316223</td>\n",
+       "      <td>0.379991</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MacrozonaCentroSur</th>\n",
-       "      <td>0.556042</td>\n",
-       "      <td>0.668708</td>\n",
-       "      <td>0.677396</td>\n",
-       "      <td>0.826208</td>\n",
-       "      <td>0.639417</td>\n",
-       "      <td>0.707188</td>\n",
+       "      <td>0.341228</td>\n",
+       "      <td>0.335768</td>\n",
+       "      <td>0.465454</td>\n",
+       "      <td>0.316011</td>\n",
+       "      <td>0.369555</td>\n",
+       "      <td>0.498858</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MacrozonaSur</th>\n",
-       "      <td>0.567208</td>\n",
-       "      <td>0.616438</td>\n",
-       "      <td>0.547271</td>\n",
-       "      <td>0.639417</td>\n",
-       "      <td>0.727938</td>\n",
-       "      <td>0.640625</td>\n",
+       "      <td>0.387163</td>\n",
+       "      <td>0.286122</td>\n",
+       "      <td>0.316223</td>\n",
+       "      <td>0.369555</td>\n",
+       "      <td>0.102990</td>\n",
+       "      <td>0.431216</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>MacrozonaAustral</th>\n",
-       "      <td>0.570292</td>\n",
-       "      <td>0.591813</td>\n",
-       "      <td>0.585417</td>\n",
-       "      <td>0.707188</td>\n",
-       "      <td>0.640625</td>\n",
-       "      <td>0.768313</td>\n",
+       "      <td>0.396523</td>\n",
+       "      <td>0.272740</td>\n",
+       "      <td>0.379991</td>\n",
+       "      <td>0.498858</td>\n",
+       "      <td>0.431216</td>\n",
+       "      <td>0.260578</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -533,23 +535,23 @@
       ],
       "text/plain": [
        "                     MacrozonaNorte  MacrozonaCentro  RegionMetropolitana  \\\n",
-       "MacrozonaNorte             0.735229         0.799646             0.572771   \n",
-       "MacrozonaCentro            0.799646         0.865083             0.657167   \n",
-       "RegionMetropolitana        0.572771         0.657167             0.724125   \n",
-       "MacrozonaCentroSur         0.556042         0.668708             0.677396   \n",
-       "MacrozonaSur               0.567208         0.616438             0.547271   \n",
-       "MacrozonaAustral           0.570292         0.591813             0.585417   \n",
+       "MacrozonaNorte             0.327651         0.700102             0.418437   \n",
+       "MacrozonaCentro            0.700102         0.391551             0.425906   \n",
+       "RegionMetropolitana        0.418437         0.425906             0.198714   \n",
+       "MacrozonaCentroSur         0.341228         0.335768             0.465454   \n",
+       "MacrozonaSur               0.387163         0.286122             0.316223   \n",
+       "MacrozonaAustral           0.396523         0.272740             0.379991   \n",
        "\n",
        "                     MacrozonaCentroSur  MacrozonaSur  MacrozonaAustral  \n",
-       "MacrozonaNorte                 0.556042      0.567208          0.570292  \n",
-       "MacrozonaCentro                0.668708      0.616438          0.591813  \n",
-       "RegionMetropolitana            0.677396      0.547271          0.585417  \n",
-       "MacrozonaCentroSur             0.826208      0.639417          0.707188  \n",
-       "MacrozonaSur                   0.639417      0.727938          0.640625  \n",
-       "MacrozonaAustral               0.707188      0.640625          0.768313  "
+       "MacrozonaNorte                 0.341228      0.387163          0.396523  \n",
+       "MacrozonaCentro                0.335768      0.286122          0.272740  \n",
+       "RegionMetropolitana            0.465454      0.316223          0.379991  \n",
+       "MacrozonaCentroSur             0.316011      0.369555          0.498858  \n",
+       "MacrozonaSur                   0.369555      0.102990          0.431216  \n",
+       "MacrozonaAustral               0.498858      0.431216          0.260578  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
