completacion del analisis de tipos de recinto

--- a/table2_analisis_SVM_grupos_etarios.ipynb
+++ b/table2_analisis_SVM_grupos_etarios.ipynb
@@ -216,43 +216,43 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>Menores 1</th>\n",
-       "      <td>0.140923</td>\n",
-       "      <td>0.433054</td>\n",
-       "      <td>0.470906</td>\n",
-       "      <td>0.447733</td>\n",
-       "      <td>0.524429</td>\n",
+       "      <td>0.502216</td>\n",
+       "      <td>0.564813</td>\n",
+       "      <td>0.580463</td>\n",
+       "      <td>0.578206</td>\n",
+       "      <td>0.637309</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>De 1 a 4</th>\n",
-       "      <td>0.433054</td>\n",
-       "      <td>0.280656</td>\n",
-       "      <td>0.839044</td>\n",
-       "      <td>0.380244</td>\n",
-       "      <td>0.385250</td>\n",
+       "      <td>0.564813</td>\n",
+       "      <td>0.586241</td>\n",
+       "      <td>0.865643</td>\n",
+       "      <td>0.520903</td>\n",
+       "      <td>0.517569</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>De 5 a 14</th>\n",
-       "      <td>0.470906</td>\n",
-       "      <td>0.839044</td>\n",
-       "      <td>0.527471</td>\n",
-       "      <td>0.402762</td>\n",
-       "      <td>0.450818</td>\n",
+       "      <td>0.580463</td>\n",
+       "      <td>0.865643</td>\n",
+       "      <td>0.718633</td>\n",
+       "      <td>0.521232</td>\n",
+       "      <td>0.567288</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>De 15 a 64</th>\n",
-       "      <td>0.447733</td>\n",
-       "      <td>0.380244</td>\n",
-       "      <td>0.402762</td>\n",
-       "      <td>0.235119</td>\n",
-       "      <td>0.773839</td>\n",
+       "      <td>0.578206</td>\n",
+       "      <td>0.520903</td>\n",
+       "      <td>0.521232</td>\n",
+       "      <td>0.561540</td>\n",
+       "      <td>0.811701</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>De 65 y mas</th>\n",
-       "      <td>0.524429</td>\n",
-       "      <td>0.385250</td>\n",
-       "      <td>0.450818</td>\n",
-       "      <td>0.773839</td>\n",
-       "      <td>0.573628</td>\n",
+       "      <td>0.637309</td>\n",
+       "      <td>0.517569</td>\n",
+       "      <td>0.567288</td>\n",
+       "      <td>0.811701</td>\n",
+       "      <td>0.751584</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -260,11 +260,11 @@
       ],
       "text/plain": [
        "             Menores 1  De 1 a 4  De 5 a 14  De 15 a 64  De 65 y mas\n",
-       "Menores 1     0.140923  0.433054   0.470906    0.447733     0.524429\n",
-       "De 1 a 4      0.433054  0.280656   0.839044    0.380244     0.385250\n",
-       "De 5 a 14     0.470906  0.839044   0.527471    0.402762     0.450818\n",
-       "De 15 a 64    0.447733  0.380244   0.402762    0.235119     0.773839\n",
-       "De 65 y mas   0.524429  0.385250   0.450818    0.773839     0.573628"
+       "Menores 1     0.502216  0.564813   0.580463    0.578206     0.637309\n",
+       "De 1 a 4      0.564813  0.586241   0.865643    0.520903     0.517569\n",
+       "De 5 a 14     0.580463  0.865643   0.718633    0.521232     0.567288\n",
+       "De 15 a 64    0.578206  0.520903   0.521232    0.561540     0.811701\n",
+       "De 65 y mas   0.637309  0.517569   0.567288    0.811701     0.751584"
       ]
      },
      "execution_count": 7,
@@ -311,7 +311,7 @@
     "        # Evaluate the result \n",
     "        y_train_pred = linear_clf.predict(X_train)\n",
     "        #precision_clasificador = metrics.f1_score(y_train, y_train_pred)\n",
-    "        precision_clasificador = metrics.balanced accuracy_score(y_train, y_train_pred)\n",
+    "        precision_clasificador = metrics.balanced_accuracy_score(y_train, y_train_pred)\n",
     "        #presicion_clasificador = metrics.accuracy_score(y_train, y_train_pred)\n",
     "        if len(group_indices)==1:\n",
     "            resultados[iter, group_indices[0],group_indices[0]] = precision_clasificador\n",
